[package]
name = "DIIS-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15", features = ["approx-0_5"] }
ndarray-linalg = { version = "0.14", features = ["openblas-system"] }
num = "0.4.0"
approx = "0.5.1"
cauchy = "0.4.0"
lax = "0.2.0"
